[package]
name = "netsim-async"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
netsim-core = { path = "../netsim-core", version = "0.1" }
# in order to continue the WASM support it is important to stick
# to the list of supported features listed https://docs.rs/tokio/latest/tokio/#wasm-support
tokio = { version = "1.35.1", features = ["sync"] }

[dev-dependencies]
clap = { version = "4.5.1", features = ["derive"] }
rand = "0.8.5"
tokio = { version = "1.35.1", features = [
    "time",
    "rt",
    "macros",
    "rt-multi-thread",
] }
tui = "0.19.0"
crossterm = "0.27.0"
