[package]
name = "netsim-core"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0"
logos = "0.14"
rand_core = { version = "0.10" }
rand_chacha = { version = "0.10" }
thiserror = "2.0"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
indicatif = "0.17"

[[bench]]
name = "gauge"
harness = false

[[bench]]
name = "vincenty"
harness = false

[[bench]]
name = "network"
harness = false
