[package]
name = "netsim-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.93.1"
license = "Apache-2.0"
description = "Low-level, deterministic network simulation primitives (nodes, links, bandwidth, latency, packet loss)"
repository = "https://github.com/input-output-hk/ce-netsim"
readme = "README.md"
keywords = ["network", "simulation", "netsim", "testing", "deterministic"]
categories = ["simulation", "network-programming", "development-tools::testing"]

[dependencies]
anyhow = "1.0"
logos = "0.14"
rand_core = { version = "0.10" }
rand_chacha = { version = "0.10" }
thiserror = "2.0"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
indicatif = "0.17"

[[bench]]
name = "gauge"
harness = false

[[bench]]
name = "geo"
harness = false

[[bench]]
name = "network"
harness = false
