[package]
name = "netsim-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.93.1"
license = "Apache-2.0"
description = "Low-level, deterministic network simulation primitives (nodes, links, bandwidth, latency, packet loss)"
repository = "https://github.com/input-output-hk/ce-netsim"
readme = "README.md"
keywords = ["network", "simulation", "netsim", "testing", "deterministic"]
categories = ["simulation", "network-programming", "development-tools::testing"]

[dependencies]
logos.workspace = true
rand_core.workspace = true
rand_chacha.workspace = true
thiserror.workspace = true

[dev-dependencies]
anyhow.workspace = true
criterion.workspace = true
indicatif.workspace = true

[[bench]]
name = "gauge"
harness = false

[[bench]]
name = "geo"
harness = false

[[bench]]
name = "network"
harness = false
