[package]
name = "ce-netsim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
ce-netsim-core = { path = "../netsim-core", version = "0.1" }
ffi-support = "0.4.4"

[build-dependencies]
cbindgen = "0.26.0"

[lib]
name = "netsim"
crate-type = ["cdylib"]
