[package]
name = "netsim"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
netsim-core = { path = "../netsim-core", version = "0.1" }

[dev-dependencies]
clap = { version = "4.5.1", features = ["derive"] }
rand = "0.8.5"
